gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/objc_non_objc_base.d
version https://git-lfs.github.com/spec/v1
oid sha256:e777efa54c665cebcc2c52f8f6e776d487539f38966fe187e3c6b9739f33472a
size 255
